时间线的UI初步整合

--- a/app/assets/templates/project/basic.html.slim
+++ b/app/assets/templates/project/basic.html.slim
@@ -64,7 +64,7 @@ form.stage0.ng-cloak ng-submit='submit()'
             span
               | {{ industry.name }}
             span.revert ng-click='revert_select(industry)'
-              i.fi-x
+              i.fa.fa-times
       small.error.ng-cloak ng-show=' errors.industries' {{ errors.industries }}
 
   .row
