--- a/app/assets/templates/select_industry.html.slim
+++ b/app/assets/templates/select_industry.html.slim
@@ -12,7 +12,7 @@
               span
                 | {{ industry.name }}
               span.revert ng-click='revert_select(industry)'
-                i.fi-x
+                i.fa.fa-times
     .row
       .small-6.columns
         h4 一级分类
