--- a/app/views/jobs/_person_requires.html.slim
+++ b/app/views/jobs/_person_requires.html.slim
@@ -21,8 +21,8 @@
             = raw project_categories_link(project)
           - if person_require.remote
             span.info.remote 
-              span.fi-cloud
+              span.fa.fa-cloud
               | 可远程
           span.info.interest 
-            span.fi-heart
+            span.fa.fa-heart
             | #{person_require.users.size} 个感兴趣
