--- a/app/views/projects/edit.html.slim
+++ b/app/views/projects/edit.html.slim
@@ -83,7 +83,7 @@
                   span
                     | {{ industry.name }}
                   span.revert ng-click='revert_select(industry)'
-                    i.fi-x
+                    i.fa.fa-times
             small.error.ng-cloak ng-show=' head_edit.errors.industries' {{ head_edit.errors.industries }}
         .row
           .small-10.medium-4.columns
