--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -11,4 +11,4 @@
           | 用户近七天暂无动态
       - else
         .timeline.simple
-          = render partial: 'home/event', collection: @recent_events
+          = render partial: 'timeline/event', collection: @recent_events
