--- a/app/views/timeline/index.html.slim
+++ b/app/views/timeline/index.html.slim
@@ -2,13 +2,13 @@
   | 时间线
 
 .timeline.top-blank ng-controller='TimelineController' ng-init='init(#{@start_with})'
-  .row.recommend-projects
-    .small-12.medium-6.columns
-      .panel
-        div hello
-    .small-12.medium-6.columns
-      .panel
-        div hello
+  /*.row.recommend-projects*/
+    /*.small-12.medium-6.columns*/
+      /*.panel*/
+        /*div hello*/
+    /*.small-12.medium-6.columns*/
+      /*.panel*/
+        /*div hello*/
   .row.content
     .small-12.medium-8.columns
       .panel
@@ -51,9 +51,9 @@
               - project = star.project
               li
                 = link_to project.name, project
-      .panel
-        h5.title 我的项目
-        ul
-          li helo
-          li helo
-          li helo
+      /*.panel*/
+        /*h5.title 我的项目*/
+        /*ul*/
+          /*li helo*/
+          /*li helo*/
+          /*li helo*/
