--- a/app/assets/stylesheets/components/load_button.scss
+++ b/app/assets/stylesheets/components/load_button.scss
@@ -4,9 +4,14 @@
   button {
     background-color: transparent;
     color: #333333;
-    border: 1px solid #DDDDDD;
+    border: 1px solid #eee;
+    padding: 0.5rem 0;
     &:focus {
       outline-style: none;
+    }
+
+    &:hover {
+      background-color: #eee;
     }
   }
 }
