--- a/app/assets/stylesheets/simple_timeline.scss
+++ b/app/assets/stylesheets/simple_timeline.scss
@@ -1,5 +1,12 @@
 .simple {
   margin-top: 2rem;
+  padding: 2rem 0;
+  background-color: #fff;
+
+  .head2 {
+    margin-bottom: 0.5rem;
+  }
+
   .content {
     display: none;
   }
