--- a/app/views/layouts/_search_input.html.slim
+++ b/app/views/layouts/_search_input.html.slim
@@ -1,2 +1,2 @@
 form ng-submit='search($event)' ng-controller='AllSearchController'
-  input.search type='text' ng-model='q' ng-init='q="#{@q}"' ng-click='$event.stopPropagation()' placeholder='搜索'
+  input.search type='text' ng-model='q' ng-init='q="#{@q}"' ng-click='$event.stopPropagation()' placeholder=t('menu.search')
