--- a/app/views/explore/all.html.slim
+++ b/app/views/explore/all.html.slim
@@ -24,7 +24,7 @@
                   option value='#{head.id}' #{head.name}
             .city
               .tag
-                | 城市:
+                | #{t('.city')}
               dl.sub-nav ng-init='city_id ="#{params[:city_id]}"'
                 dd class="#{active_for('', params[:city_id].to_s)}" ng-class="{ active: is_selected_city('') }"
                   a ng-click='select_city("")' #{t('.all_cities')}
