--- a/app/views/explore/trend.html.slim
+++ b/app/views/explore/trend.html.slim
@@ -1,5 +1,5 @@
 - content_for(:title) do
-  | 趋势 - 发现
+  | #{t('.trend')}
 .explore
   .row
     .small-12.columns
@@ -8,27 +8,27 @@
         .show-for-medium-up.small-0.medium-3.columns
           ul.by-tabs
             li.tab-title class="#{active_for(@cond, :by_investments)}"
-              = link_to '按融资量', trend_explore_index_path(cond: :by_investments, how_much: @how_much)
+              = link_to t('.by_investments'), trend_explore_index_path(cond: :by_investments, how_much: @how_much)
             li.tab-title class="#{active_for(@cond, :by_stars)}"
-              = link_to '按关注数', trend_explore_index_path(cond: :by_stars, how_much: @how_much)
+              = link_to t('.by_stars'), trend_explore_index_path(cond: :by_stars, how_much: @how_much)
             li.tab-title class="#{active_for(@cond, :by_talks)}"
-              = link_to '按约谈数', trend_explore_index_path(cond: :by_talks, how_much: @how_much)
+              = link_to t('.by_talks'), trend_explore_index_path(cond: :by_talks, how_much: @how_much)
             li.tab-title class="#{active_for(@cond, :by_times)}"
-              = link_to '按最近时间', trend_explore_index_path(cond: :by_times, how_much: @how_much)
+              = link_to t('.by_times'), trend_explore_index_path(cond: :by_times, how_much: @how_much)
         .small-12.medium-9.columns
           ul.by-tabs-2
             li.tab-title class="#{active_for(@how_much, :most_a_week)}"
-              = link_to '按周', trend_explore_index_path(cond: @cond, how_much: :most_a_week)
+              = link_to t('.a_week'), trend_explore_index_path(cond: @cond, how_much: :most_a_week)
             li.tab-title class="#{active_for(@how_much, :most_a_month)}"
-              = link_to '按月', trend_explore_index_path(cond: @cond, how_much: :most_a_month)
+              = link_to t('.a_month'), trend_explore_index_path(cond: @cond, how_much: :most_a_month)
           .trend
             - if @cond == :by_investments
               table
                 thead
                   tr
                     td.index
-                    td.project 项目
-                    td.commitment 融资额
+                    td.project #{t('.project')}
+                    td.commitment #{t('.amount')}
                 tbody
                 - i = 0
                 - @investments_most.each do |money_require_id, count|
@@ -45,8 +45,8 @@
                 thead
                   tr
                     td.index
-                    td.project 项目
-                    td.star 新增关注
+                    td.project #{t('.project')}
+                    td.star #{t('.star')}
                 tbody
                 - i = 0
                 - @stars_most.each do |project_id, count|
@@ -62,8 +62,8 @@
                 thead
                   tr
                     td.index
-                    td.project 项目
-                    td.star 新增约谈
+                    td.project #{t('.project')}
+                    td.star #{t('.talk')}
                 tbody
                 - i = 0
                 - @talks_most.each do |project_id, count|
@@ -79,8 +79,8 @@
                 thead
                   tr
                     td.index
-                    td.project 项目
-                    td.star 创建时间
+                    td.project #{t('.project')}
+                    td.star #{t('.time')}
                 tbody
                 - i = 0
                 - @projects_most.each do |project|
